# tech-challenge-fase-4-8IADT

./: .env.example  .gitignore  CONTEXT.md  README.md  docker-compose.ghcr.yml  docker-compose.video-real.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  db.py  health.py  main.py
backend/app/alerts/: __init__.py  hub.py  router.py
backend/app/auth/: __init__.py  deps.py  models.py  rate_limit.py  router.py  schemas.py  seed.py  service.py  tokens.py
backend/app/azure/: __init__.py  audio_nlp.py  circuit_breaker.py  critical_terms.py  language.py  provider.py  speech.py
backend/app/cases/: __init__.py  db_store.py  justification.py  models.py  multimodal_seed.py  multimodal_seed_http.py  pose_engine.py  pose_estimator.py  prescriptions_engine.py  processing.py  (+9 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_admin_failures.py  test_alerts_sse.py  test_audio_fixtures.py  test_audio_nlp.py  test_auth_login.py  test_auth_logout.py  test_auth_rate_limit.py  test_auth_refresh.py  test_auth_seed.py  test_azure_circuit_breaker.py  test_azure_language_client.py  test_azure_speech_client.py  test_cases_alert_versions.py  test_cases_alerts.py  test_cases_artifacts.py  test_cases_attach_audio.py  test_cases_attach_prescriptions.py  test_cases_attach_video.py  test_cases_audio_e2e.py  test_cases_audio_pipeline.py  test_cases_audio_transcript.py  test_cases_create.py  test_cases_justification.py  test_cases_partial_failure.py  test_cases_prescriptions_e2e.py  test_cases_reprocess.py  test_cases_risk.py  test_cases_video_e2e.py  test_cases_video_pose.py  test_cases_video_scene.py  test_e10_docs_fechamento.py  test_e11_docs_fechamento.py  test_e12_notebooks_evidencia.py  test_e81_docs_fechamento.py  test_e82_docs_fechamento.py  test_e94_comparacao_docs.py  test_etl_vitals_datasets.py  test_evidencia_audio.py  test_evidencia_video.py  (+27 more)
(+252 files in other folders)
