[project]
name = "limen-backend"
version = "0.1.0"
description = "Backend FastAPI do protótipo acadêmico Limen"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "bcrypt>=4.2,<5",
    "fastapi>=0.115,<1",
    "minio>=7.2,<8",
    "psycopg[binary]>=3.2,<4",
    "pyjwt>=2.9,<3",
    "redis>=5,<8",
    "sqlalchemy>=2,<3",
    "urllib3>=2,<3",
    "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
