[project]
name = "limen-backend"
version = "0.1.0"
description = "Backend FastAPI do protótipo acadêmico Limen"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14,<2",
    "bcrypt>=4.2,<5",
    "cryptography>=44,<47",
    "fastapi>=0.115,<1",
    "minio>=7.2,<8",
    "psycopg[binary]>=3.2,<4",
    "pyjwt>=2.9,<3",
    "python-multipart>=0.0.9",
    "redis>=5,<8",
    "rq>=2,<3",
    "sqlalchemy>=2,<3",
    "urllib3>=2,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
azure-speech = [
    "azure-cognitiveservices-speech>=1.40,<2",
]
azure-language = [
    "azure-ai-textanalytics>=5.3,<6",
]
ultralytics = [
    "ultralytics>=8.3,<9",
]

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<10",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
